Fix WikiFont on IE/Edge
Update the path to WikiFont in iefontfix.css. This fixes an issue
where WikiFont doesn't load in Edge.
Increment the version number.

--- a/refreshed/styles/screen/iefontfix.css
+++ b/refreshed/styles/screen/iefontfix.css
@@ -37,10 +37,10 @@
 
 @font-face {
 	font-family: 'WikiFont-Glyphs';
-	src: url('wikifont/WikiFont-Glyphs.eot'); /* IE9 Compat Modes */
-	src: url('wikifont/WikiFont-Glyphs.woff') format('woff'), /* Modern Browsers */
-		url('wikifont/WikiFont-Glyphs.ttf') format('truetype'), /* Safari, Android, iOS */
-		url('wikifont/WikiFont-Glyphs.svg#8088f7bbbdba5c9832b27edb3dfcdf09') format('svg'); /* Legacy iOS */
+	src: url('../../wikifont/WikiFont-Glyphs.eot'); /* IE9 Compat Modes */
+	src: url('../../wikifont/WikiFont-Glyphs.woff') format('woff'), /* Modern Browsers */
+		url('../../wikifont/WikiFont-Glyphs.ttf') format('truetype'), /* Safari, Android, iOS */
+		url('../../wikifont/WikiFont-Glyphs.svg#8088f7bbbdba5c9832b27edb3dfcdf09') format('svg'); /* Legacy iOS */
 }
 
 #header .wikiglyph-caret-down:before {
